src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ZPAPER__FaxEmailValue__c</fullName>
        <description>//ERS150226 empty field handling #18867</description>
        <formula>if( LEN(Fax) &lt; 10, &quot;&quot; , substitute(substitute(substitute(substitute(Fax,&quot;-&quot;,&quot;&quot;),&quot;(&quot;,&quot;&quot;),&quot;)&quot;,&quot;&quot;),&quot; &quot;,&quot;&quot;) + &quot;.&quot; + CASESAFEID($Organization.Id) + &quot;.&quot; + CASESAFEID(Id) + &quot;@mfb.zpaper.com&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax Email Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__FaxEmail__c</fullName>
        <label>Fax Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ZPAPER__faxType__c</fullName>
        <description>document type and other identifying codes</description>
        <label>Document Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__latestFax__c</fullName>
        <description>time when the more recent fax arrives</description>
        <label>Latest Document</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZPAPER__newFax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>will be checked when a new fax arrives</description>
        <label>New Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZPAPER__outboundFaxTemplate__c</fullName>
        <description>holds the myFormBin ID for controlling the merge</description>
        <label>Outbound Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__producedId__c</fullName>
        <description>Most recent document sent out for delivery.</description>
        <label>producedId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__receivedId__c</fullName>
        <label>receivedId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__sentFaxAt__c</fullName>
        <description>when the fax was sent</description>
        <label>Sent Document At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ZPAPER__sentFaxStatus__c</fullName>
        <description>delivery details</description>
        <label>Sent Document Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__sentFaxTo__c</fullName>
        <description>destination email or phone</description>
        <label>Sent Document To</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZPAPER__sentFax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates a fax has be sent but the sentFaxStatus will hold the delivery information</description>
        <label>Sent Document</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>